<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2020 Gaukler Faun

     This program is free software: you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
     the Free Software Foundation, either version 3 of the License, or
     (at your option) any later version.

     This program is distributed in the hope that it will be useful,
     but WITHOUT ANY WARRANTY; without even the implied warranty of
     MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
     GNU General Public License for more details.

     You should have received a copy of the GNU General Public License
     along with this program.  If not, see <http://www.gnu.org/licenses/>
-->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <Preference
        android:title="@string/settings_security_moodle"
        android:icon="@drawable/key"
        android:summary="@string/settings_security_moodle_summary"
        android:key="settings_security_moodle" />

    <Preference
        android:title="@string/settings_security_pin"
        android:icon="@drawable/close_circle_outline"
        android:summary="@string/settings_security_pin_summary"
        android:key="settings_security_pin" />

    <ListPreference
        android:icon="@drawable/icon_sort"
        android:key="sortDBB"
        android:defaultValue="title"
        android:title="@string/setting_sort"
        android:summary="@string/setting_sort_summary"
        android:entries="@array/setting_entries_sort"
        android:entryValues="@array/setting_values_sort"/>

    <ListPreference
        android:icon="@drawable/icon_columns"
        android:key="columns"
        android:defaultValue="2"
        android:title="@string/setting_columns"
        android:summary="@string/setting_columns_summary"
        android:entries="@array/setting_entries_columns"
        android:entryValues="@array/setting_values_columns"/>

    <CheckBoxPreference
        android:key="nightMode"
        android:defaultValue="false"
        android:icon="@drawable/icon_night"
        android:title="@string/setting_nightMode"
        android:summary="@string/setting_nightMode_summary"/>

    <CheckBoxPreference
        android:key="external"
        android:defaultValue="true"
        android:icon="@drawable/icon_exit"
        android:title="@string/setting_external"
        android:summary="@string/setting_external_summary"/>

    <Preference
        android:icon="@drawable/icon_help"
        android:summary="@string/dialog_help_summary"
        android:key="settings_help" />

    <Preference
        android:icon="@drawable/icon_info"
        android:summary="@string/settings_license_about_summary"
        android:key="settings_license" />

</PreferenceScreen>
